- Switched to use wxXmlSerializer 1.1.11:
  - Function xsSerializable::AddChild(xsSerializable* child) correctly initializes all children recursively.

- Added orthogonal line shape (wxSFOrthoShape). This line consists of subsegments orthogonal to base axis.
- Added new arrow style "diamond arrow" (wxSFDiamondArrow) and "circle arrow" (wxSFCircleArrow).
- Added abbility to set line's docking point to its starting (value 'sfdvLINESHAPE_DOCKPOINT_START') or ending
  (value 'sfdvLINESHAPE_DOCKPOINT_END') point.
- Renamed function wxSFShapeBase::IsInside(const wxPoint& pos) to wxSFShapeBase::Contains(const wxPoint& pos) due to
  its previous misleading name.
- Renamed function wxSFShapeHandle::IsInside(const wxPoint& pos) to wxSFShapeHandle::Contains(const wxPoint& pos) due to
  its previous misleading name.
- Scale factor of shape canvas containing control shapes can be only "1".
- Fixed positioning of control shapes (wxSFControlShape) during dragging of their parent shapes.
- Fixed crash occured when undo/redo operations were used on a shape canvas containing control shapes (wxSFControlShape).
- Fixed crash occured when NULL pointer was passed to "shapeInfo" parameter of wxSFDiagramManager::AddShape(wxClassInfo* shapeInfo,
  const wxPoint& pos, bool saveState) function.

Changes in version 1.7.2 beta (2009-03-16):
--------------------------------------------
- Switched to use wxXmlSerializer 1.1.10:
  - Added two new simple samples (console applications) for demonstration how to use wxXmlSerializer for serialization of user-defined class instances
    using new defined operators.
  - Added function bool xsSerializable::HasChildren().
  - Added static function xsPropertyIO* wxXmlSerializer::GetPropertyIOHandler(const wxString& datatype) returning pointer to I/O handler suitable for given
    data type if exists, otherwise NULL.
  - Added new data type and I/O handler for string hash map ('StringMap' data type).