@@ -37,6 +37,18 @@ public:
 	wxSFOpenArrow(const wxSFOpenArrow& obj);
 	/*! \brief Destructor. */
 	virtual ~wxSFOpenArrow(void);
+	
+	// public member data accessors
+	/**
+	 * \brief Set a pen used for drawing of the arrow.
+	 * \param pen Reference to the pen
+	 */
+	void SetArrowPen(const wxPen& pen) {m_Pen = pen;}
+	/**
+	 * \brief Get current pen used for drawing of the arrow.
+	 * \return Constant reference to current pen
+	 */
+	const wxPen& GetArrowPen() const {return m_Pen;}
 
 	// public virtual functions
 	/*!
@@ -46,6 +58,11 @@ public:
 	 * \param dc Device context for drawing
 	 */
 	virtual void Draw(const wxRealPoint& from, const wxRealPoint& to, wxDC& dc);
+	
+protected: 
+	// protected data members
+	/*! \brief Arrow pen */
+	wxPen m_Pen;
 };
 
 #endif //_WXSFOPENARROW_H
