@@ -55,8 +55,10 @@ wxSFCircleArrow::~wxSFCircleArrow(void)
 
 void wxSFCircleArrow::Draw(const wxRealPoint &from, const wxRealPoint &to, wxDC& dc)
 {
+	dc.SetPen(m_Pen);
     dc.SetBrush(m_Fill);
     dc.DrawCircle( Conv2Point( to ), m_nRadius );
     dc.SetBrush(wxNullBrush);
+	dc.SetPen(wxNullPen);
 }
 
