@@ -27,16 +27,25 @@ XS_IMPLEMENT_CLONABLE_CLASS(wxSFOpenArrow, wxSFArrowBase);
 wxSFOpenArrow::wxSFOpenArrow(void)
 : wxSFArrowBase()
 {
+	m_Pen = sfdvARROW_BORDER;
+	
+	XS_SERIALIZE_EX(m_Pen, wxT("arrow_style"), sfdvARROW_BORDER);
 }
 
 wxSFOpenArrow::wxSFOpenArrow(wxSFShapeBase* parent)
 : wxSFArrowBase(parent)
 {
+	m_Pen = sfdvARROW_BORDER;
+	
+	XS_SERIALIZE_EX(m_Pen, wxT("arrow_style"), sfdvARROW_BORDER);
 }
 
 wxSFOpenArrow::wxSFOpenArrow(const wxSFOpenArrow& obj)
 : wxSFArrowBase(obj)
 {
+	m_Pen = obj.m_Pen;
+	
+	XS_SERIALIZE_EX(m_Pen, wxT("arrow_style"), sfdvARROW_BORDER);
 }
 
 wxSFOpenArrow::~wxSFOpenArrow(void)
@@ -53,6 +62,8 @@ void wxSFOpenArrow::Draw(const wxRealPoint &from, const wxRealPoint &to, wxDC& d
 	
 	TranslateArrow( rarrow, arrow, 3, from, to );
 
+	dc.SetPen( m_Pen );
 	dc.DrawLine(rarrow[0], rarrow[1]);
     dc.DrawLine(rarrow[0], rarrow[2]);
+	dc.SetPen( wxNullPen );
 }
